# rv

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile  llmdiff.toml  rustwrap.yaml
.claude/ai-references/: configure-repo.md
.github/scripts/: e2e.py  integration.py  tag_check.py
.github/workflows/: ci.yaml  homebrew.yml  release.yml
ai-docs/: 2025-10-18-rhel-research.md
docs/: config.md  installation.md  repository-configuration-cli.md  usage.md
dummy-pkg/: .Rbuildignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE
dummy-pkg/R/: lib.R
example_projects/archive/: rproject.toml
example_projects/big/: rproject.toml
example_projects/configure-args/: rproject.toml
example_projects/custom-lib-path/: rproject.toml
example_projects/cyclic-suggests/: README.md  rproject.toml
example_projects/env_var/: rproject.toml
example_projects/force-src/: rproject.toml
example_projects/git-dep-branch/: rproject.toml
example_projects/git-dep-tag/: rproject.toml
example_projects/git-submodules/: rproject.toml
example_projects/local-deps/: rproject.toml
example_projects/local-deps-depends-only/: rproject.toml
example_projects/local-tarball-dep/: rproject.toml
example_projects/multi-repo/: rproject.toml
example_projects/no-lockfile/: rproject.toml
example_projects/package-upgrade/: rproject.toml
example_projects/private-git-dep/: rproject.toml
example_projects/project-upgrade/: rproject.toml
example_projects/r-universe/: rproject.toml
example_projects/rspm-cran/: rproject.toml
example_projects/simple/: rproject.toml
example_projects/trailing-slash/: rproject.toml
example_projects/url-dep/: rproject.toml
example_projects/windows-carData/: rproject.toml
examples/conda-integration/: README.md  rproject.toml.example  test-conda.sh
scripts/: install.sh
src/: activate.rs  add.rs  cancellation.rs  conda.rs  config.rs  configure.rs  consts.rs  context.rs  format.rs  fs.rs  http.rs  lib.rs  library.rs  lockfile.rs  main.rs  project_summary.rs  r_cmd.rs  r_parser.rs  renv.rs  repository.rs  repository_urls.rs  system_info.rs  system_req.rs  utils.rs
src/cache/: disk.rs  info.rs  mod.rs  utils.rs
src/cli/: mod.rs  resolution.rs  sync.rs  (+1 more)
tests/: cli_configure_repository.rs
(+202 files in other folders)
